[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "codilityTests"
version = "0.0.1"
authors = [
  { name="Hans Christian Ekne", email="hce@ekneconsulting.com" },
]
description = "Package for Codility Examples"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hcekne/codilityTests.git"
